fixed gap with cards

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,6 +28,7 @@
     background-attachment: fixed;
     background-position: center top;
     background-size: cover;
+    padding-top: 20px;
 }    
 
 #mask {
@@ -35,6 +36,8 @@
     border-radius: 10px;
     font-weight: bold;
     text-shadow: 1px 2px 3px black;
+    margin: 20px 50px;
+    padding: 8px;
 }
 
 .social-icons {
